# Fasal

./: .coverage  .env.example  README.md  design.md  pyproject.toml
.github/workflows/: ci.yml
Design/: .thumbnail  FASAL Console.dc.html
Design/uploads/: README.md  design.md
docs/: 00-executive-overview.md  01-product-requirements.md  02-system-architecture.md  03-data-architecture-governance.md  04-ai-ml-modeling-plan.md  05-field-ops-hardware-plan.md  06-risk-compliance.md  07-roadmap-task-breakdown.md  08-pitch.md  README.md  backend_design.md  growth-plan.md  science.md
fasal/: __init__.py  cli.py
fasal/api/: __init__.py  app.py  dataset.py  demo_data.py  routes.py  security.py
fasal/core/: __init__.py  config.py  constants.py  logging.py
fasal/db/: __init__.py  repository.py
fasal/features/: __init__.py  indices.py  spectral.py
fasal/hardware/: __init__.py  interfaces.py  simulated.py
fasal/models/: __init__.py  base.py  baseline.py  explain.py  registry.py  scoring.py  uncertainty.py
fasal/pipeline/: __init__.py  calibration.py  cube.py  orchestrator.py  preprocess.py  qc.py  segmentation.py  spectrum.py
fasal/services/: __init__.py  sampling.py  screening.py
fasal/shared/: __init__.py  enums.py  outputs.py  schemas.py
fasal/storage/: __init__.py  store.py
fasal/synth/: __init__.py  generator.py
infra/: docker-compose.yml
tests/: test_api.py  test_api_security.py  test_avantes.py  test_calibration.py  test_contracts.py  test_cube.py  test_deep.py  test_indices_features.py  test_models.py  test_preprocess.py  test_qc_pipeline.py  test_review_fixes.py  test_screening.py  test_spectrum.py  test_storage_db.py  test_vectorization.py
web/: .env.local.example  .gitignore  README.md  middleware.ts  next.config.mjs  package.json  pnpm-lock.yaml  vitest.config.ts  vitest.setup.ts
web/app/: globals.css  layout.tsx  providers.tsx
web/lib/: api.ts  queries.ts  risk.test.ts  risk.ts  (+3 more)
(+34 files in other folders)
