[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fasal"
version = "0.1.0"
description = "FASAL — drone hyperspectral + AI pesticide-residue risk screening (backend)"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "FASAL" }]

# Core runtime — intentionally light so the spectroscopy science + baseline ML install
# and run without heavy/optional dependencies. Heavier capabilities are opt-in extras.
dependencies = [
  "numpy>=1.26",
  "scipy>=1.11",
  "scikit-learn>=1.4",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
]

[project.optional-dependencies]
deep = ["torch>=2.2"]                              # PyTorch deep models (fasal.models.deep)
api  = ["fastapi>=0.110", "uvicorn[standard]>=0.29"]  # thin HTTP surface (fasal.api)
geo  = ["rasterio>=1.3", "xarray>=2024.1"]         # optional GeoTIFF/cube I/O
mlops = ["mlflow>=2.11", "dvc>=3.0"]               # experiment + dataset versioning
dev  = ["pytest>=8.0", "pytest-cov>=4.1", "ruff>=0.4"]
all  = ["fasal[deep,api,geo,mlops,dev]"]

[project.scripts]
fasal = "fasal.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["fasal"]

[tool.pytest.ini_options]
# Run from repo root without an editable install; torch/fastapi tests importorskip.
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.lint.flake8-bugbear]
# FastAPI dependency-injection markers are designed to be called in argument defaults (not B008).
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query", "fastapi.Header", "fastapi.Path", "fastapi.Body", "fastapi.Security"]
